// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertOctagonIcon when asked to render matches snapshot 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="24"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <polygon
    points="7.86 2 16.14 2 22 7.86 22 16.14 16.14 22 7.86 22 2 16.14 2 7.86 7.86 2"
  />
  <line
    x1="12"
    x2="12"
    y1="8"
    y2="12"
  />
  <line
    x1="12"
    x2="12.01"
    y1="16"
    y2="16"
  />
</svg>
`;

exports[`AlertOctagonIcon when asked to render with additional class renders with additional class 1`] = `
<svg
  aria-hidden="true"
  className="some-class"
  fill="none"
  height="24"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <polygon
    points="7.86 2 16.14 2 22 7.86 22 16.14 16.14 22 7.86 22 2 16.14 2 7.86 7.86 2"
  />
  <line
    x1="12"
    x2="12"
    y1="8"
    y2="12"
  />
  <line
    x1="12"
    x2="12.01"
    y1="16"
    y2="16"
  />
</svg>
`;
